<resources>
    <string name="app_name">NUMAD24Fa_JiaominYe</string>
    <!-- Main Activity Buttons -->
    <string name="calculator">QuickCalc</string>
    <string name="contacts">Contacts Collector</string>
    <string name="about_me">About Me</string>

    <!-- About Me Activity -->
    <string name="my_name">Name: Jiaomin(Amy) Ye</string>
    <string name="my_email">Email: yejiaomin@gmail.com</string>

    <!-- Contact Collector -->
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="confirm_add">Add</string>
    <string name="cancel_add">Cancel</string>
    <string name="show_name">Name</string>
    <string name="show_phone">Phone Number</string>


    <!-- Calculator Activity -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="delete">X</string>
    <string name="equal">=</string>


</resources>