<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="56dp">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"/>

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"/>

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_add"
        app:layout_constraintTop_toBottomOf="@id/phone_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_add"
        app:layout_constraintTop_toBottomOf="@id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>